syntax = "proto3";

package vnarpc; //vnarpc

option java_multiple_files = true;

service vnarpc { //vnarpc
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc getPortCount (PortRequest) returns (PortCount) {}
    rpc getPortStatus (Port) returns (PortStatus) {}
    rpc measurePort (MeasureParams) returns (EmptyMessage) {}
    rpc measureThru (PortsPair) returns (EmptyMessage) {}
    rpc apply (EmptyMessage) returns (EmptyMessage) {}
    rpc reset (EmptyMessage) returns (EmptyMessage) {}
}


message EmptyMessage {}

message Port {
    int32 port = 1;
}

//номер порта, тип нагрузки, гендер
message MeasureParams {
    int32 port = 1;
    string type = 2;
    bool gender = 3;
}

// статус порта open short load gender
message PortStatus {
    bool open = 1;
    bool short = 2;
    bool load = 3;
    bool gender = 4;
}

// пара портов для измерения на перемычке
message PortsPair {
    int32 firstport = 1;
    int32 secondport = 2;
}

message PortRequest{
  int32 portname=3;
}

message PortCount {
    int32 portcountdisp = 3;
}

message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}


//protoc vnarpc.proto --cpp_out=.
//protoc vnarpc.proto --grpc_out=. --plugin=protoc-gen-grpc=`which grpc_cpp_plugin`
